--- a/Login Form.html
+++ b/Login Form.html
@@ -5,17 +5,17 @@
     <label><i>Middle Initial</i><input type="text" name="middle initial"></label>
     <label><i>Surname</i><input type="text" name="surname"></label>
   </p>
-  <p>Personal Details:
-    <label><i>Address</i><input type="text" name="address"></label>
-    <label><i>Post Code</i><input type="text" name="post code"></label>
-    <label><i>City</i><input type="text" name="city"></label>
-    <label><i>Phone Number</i><input type="text" name="phone number"></label>
+  <p>Personal Details:<br>
+    <label><i>Address</i><input type="text" name="address"></label><br>
+    <label><i>Post Code</i><input type="text" name="post code"></label><br>
+    <label><i>City</i><input type="text" name="city"></label><br>
+    <label><i>Phone Number</i><input type="text" name="phone number"></label><br>
     <label><i>Email</i><input type="text" name="email"></label>
   </p>
   <p>Gender:
     <label><input type="radio" name="gender" value="m" checked>Male</label>
     <label><input type="radio" name="gender" value="f">Female</label>
-    <label><input type="radio" name="gender" value="x">Prefer not to day</label>
+    <label><input type="radio" name="gender" value="x">Prefer not to say</label>
   </p>
   <p>Cultural Preferences:
     <label><input type="checkbox" name="likes" value="books" checked>Books</label>
@@ -25,9 +25,9 @@
     <label><input type="checkbox" name="likes" value="cooking">Cooking</label>
     <label><input type="checkbox" name="likes" value="friends">Friends</label>
   </p>
-  <p>Personal Description:
+  <p>Personal Description:<br>
     <textarea placeholder="Describe yourself here"></textarea>
   </p>
   <p><input type="submit" name="submit" value="ok">
-     <input type="reser" name="reset" value="cancel">
+     <input type="reset" name="reset" value="cancel">
   </p>
