--- a/Login Form.html
+++ b/Login Form.html
@@ -6,11 +6,12 @@
     <label><i>Surname</i><input type="text" name="surname"></label>
   </p>
   <p>Personal Details:<br>
-    <label><i>Address</i><input type="text" name="address"></label><br>
-    <label><i>Post Code</i><input type="text" name="post code"></label><br>
-    <label><i>City</i><input type="text" name="city"></label><br>
-    <label><i>Phone Number</i><input type="text" name="phone number"></label><br>
-    <label><i>Email</i><input type="text" name="email"></label>
+    <label><i>Address</i><br>
+      <input type="text" name="address"></label><br>
+    <label><i>Post Code</i><br><input type="text" name="post code"></label><br>
+    <label><i>City</i><br><input type="text" name="city"></label><br>
+    <label><i>Phone Number</i><br><input type="text" name="phone number"></label><br>
+    <label><i>Email</i><br><input type="text" name="email"></label>
   </p>
   <p>Gender:
     <label><input type="radio" name="gender" value="m" checked>Male</label>
