--- a/index.html
+++ b/index.html
@@ -319,6 +319,144 @@
 	<p><input type="submit" name="submit" value="Book your vacation">
 		<input type="submit" name="submit" value="Ok">
 	</p>
+	
+	h1>Login Form</h1>
+<form method="post" action="https://www.fabiovitali.it/TW/DHDK/doResponse.php">
+  <p>
+    <label><i>Name</i><input type="text" name="name"></label>
+    <label><i>Middle Initial</i><input type="text" name="middle initial"></label>
+    <label><i>Surname</i><input type="text" name="surname"></label>
+  </p>
+  <p>Personal Details:<br>
+    <label><i>Address</i><br>
+      <input type="text" name="address"></label><br>
+    <label><i>Post Code</i><br><input type="text" name="post code"></label><br>
+    <label><i>City</i><br><input type="text" name="city"></label><br>
+    <label><i>Phone Number</i><br><input type="text" name="phone number"></label><br>
+    <label><i>Email</i><br><input type="text" name="email"></label>
+  </p>
+  <p>Gender:
+    <label><input type="radio" name="gender" value="m" checked>Male</label>
+    <label><input type="radio" name="gender" value="f">Female</label>
+    <label><input type="radio" name="gender" value="x">Prefer not to say</label>
+  </p>
+  <p>Cultural Preferences:
+    <label><input type="checkbox" name="likes" value="books" checked>Books</label>
+    <label><input type="checkbox" name="likes" value="art">Art</label>
+    <label><input type="checkbox" name="likes" value="films">Films</label>
+    <label><input type="checkbox" name="likes" value="sport">Sport</label>
+    <label><input type="checkbox" name="likes" value="cooking">Cooking</label>
+    <label><input type="checkbox" name="likes" value="friends">Friends</label>
+  </p>
+  <p>Personal Description:<br>
+    <textarea placeholder="Describe yourself here"></textarea>
+  </p>
+  <p><input type="submit" name="submit" value="ok">
+     <input type="reset" name="reset" value="cancel">
+  </p>
+	
+	<h1>Sunday Reading: The Birth of Tech</h1>
+<p>By Erin Overbey and Joshua Rothman January 27, 2019 </p>
+
+<p><img src="C:\Users\rjbea\Documents\DHDK Bologna\Year 1\4. Information Modelling and Web Technologies\imgs\Stories/Sunday-Reading-The-Internet.jpg" alt="Computer pic" height="400"><br>
+<small>Photograph by Jonathan Elderfield / Liaison / Getty</small></p>
+
+	<table style="border:1px solid black;margin-left:auto;margin-right:auto;">
+	<caption>Contents</caption>
+		<tr>
+			<th>Story</th><th>Page</th></thead>
+		</tr>
+		<tr>
+			<th>My First Flame</th><td>1</td>
+		</tr>
+		<tr>
+			<th>Virtual Love</th><td>2</td>
+		</tr>
+		<tr>
+			<th>The Perceptionist</th><td>3</td>
+		</tr>
+		<tr>
+			<th>The Media</th><td>4</td>
+		</tr>
+		<tr>
+			<th>The Tao of Wi-Fi</th><td>5</td>
+		</tr>
+		<tr>
+			<th>Free Money</th><td>6</td>
+		</tr>
+		<tr>
+			<th>A New Page</th><td>7</td>
+		</tr>
+		<tr>
+			<th>Search and Deploy</th><td>8</td>
+		</tr>
+		<tr>
+			<th>E-Mail from Bill</th><td>9</td>
+		</tr>
+		<tr>
+			<th>Bytes and Chips</th><td>10</td>
+</table>
+
+<p>Today, for better and for worse, the Internet is a part of all of our lives. But it wasn’t always so. This week, we’re bringing you pieces from the early days of tech culture, when going online was a novelty and kids still played outside. In “My First Flame,” from 1994, John Seabrook describes his first experience with online insults and trolling (“in any other medium, these words would be, literally, unspeakable”); he also undertakes an electronic correspondence with Bill Gates, in “E-Mail from Bill.” (“We were intimate in a curious way, in the sense of being wired into each other’s minds, but our contact was elaborately stylized, like ballroom dancing.”) In “Virtual Love,” from 1997, Meghan Daum experiments with Internet dating, despite not being “what most people would call a ‘computer person.’ ” John Heilemann, John Cassidy, and Michael Specter offer early profiles of Steve Jobs, Mark Zuckerberg, and Larry Page and Sergey Brin, respectively. Erik Larson recounts the story of iVillage, the Internet company whose two female co-founders, Nancy Evans and Candice Carpenter, became unimaginably rich through an I.P.O., despite being “neither ‘Web heads’ nor computer geeks,” signalling a new era in tech. Lauren Collins explores a new form of self-expression—the clever naming of one’s Wi-Fi network. Nicholson Baker uses a Kindle for the first time and wonders if a device could ever be better than a book. Finally, in a Talk of the Town story, from 1977, Anthony Hiss visits an acquaintance in California with a new hobby: assembling his own personal computer. Eventually, his acquaintance predicts, people will “start hooking their machines in with their friends’ machines, and people will get on nets of computers, which could mean you could vote or buy something while sitting at your own computer keyboard.” He notes that “if the electricity fails, the kids will be in trouble.” He didn’t know the half of it.</p><hr>
+
+<p><b><u>“My First Flame”</b></u></p>
+
+<p><img src="C:\Users\rjbea\Documents\DHDK Bologna\Year 1\4. Information Modelling and Web Technologies\imgs\Stories/Sunday-Reading-940606_ra612.jpg" alt="Computer pic" height="400"><br>
+<small>Photograph by Jonathan Elderfield / Liaison / Getty</small></p>
+
+<p>“I got flamed for the first time a couple of months ago. To flame, according to ‘Que’s Computer User’s Dictionary,’ is ‘to lose one’s self-control and write a message that uses derogatory, obscene, or inappropriate language.’ ”</p><hr>
+
+<p><b><u>“Virtual Love”</b></u></p>
+
+<p><img src="C:\Users\rjbea\Documents\DHDK Bologna\Year 1\4. Information Modelling and Web Technologies\imgs\Stories/Sunday-Reading-970825_ra610.jpg" alt="Computer pic" height="400"><br>
+<small>Photograph by James Keyser / The LIFE Images Collection / Getty</small></p>
+
+<p>“Thanks to the computer, I was involved in a well-defined courtship, a neat little space in which he and I were both safe to express the panic and the fascination of our mutual affection.”</p><hr>
+
+<p><b><u>“The Perceptionist”</b></u></p>
+
+<p><img src="C:\Users\rjbea\Documents\DHDK Bologna\Year 1\4. Information Modelling and Web Technologies\imgs\Stories/Sunday-Reading-970908_ra613.jpg" alt="Computer pic" height="400"><br>
+<small>Photograph by Michael L. Abramson / Getty</small></p>
+
+<p>“Steve Jobs’s mastery of perception has long been known to his allies and his detractors alike as his ‘reality-distortion field’—an uncanny ability, through enthusiasm, charisma, and intimidation, to make people see what he wants them to see.”</p><hr>
+
+<p><b><u>“Me Media”</b></u></p>
+
+<p>“The growth of sites like Facebook and MySpace reflects a dramatic shift in how young people view the Internet.”</p><hr>
+
+<p><b><u>“The Tao of Wi-Fi”</b></u></p>
+
+<p>“Wireless names can act as welcome mats, luring their beholder into a store or a discussion, or as gargoyles, patrolling a patch of virtual turf.”</p><hr>
+
+<p><b><u>“Free Money”</b></u></p>
+
+<p>“A company as ethereal as air, with deep losses, few physical assets, little proprietary technology, extravagant rates of spending, a high employee ‘burn rate,’ and powerful emerging competitors, had accomplished one of the most successful I.P.O.s ever.”</p><hr>
+
+<p><b><u>“A New Page”</b></u></p>
+
+<p><img src="C:\Users\rjbea\Documents\DHDK Bologna\Year 1\4. Information Modelling and Web Technologies\imgs\Stories/Sunday-Reading-090803_r18587_p646.jpg" alt="Computer pic" height="400"><br>
+<small>Photograph by Gus Powell</small></p>
+
+<p>“Here’s what you buy when you buy a Kindle book. You buy the right to display a grouping of words in front of your eyes for your private use with the aid of an electronic display device approved by Amazon.”</p><hr>
+
+<p><b><u>“Search and Deploy”</b></u></p>
+
+<p>“At the age of twenty-seven, Lawrence Page runs—with a fellow former Stanford graduate student, Sergey Brin—a small company, based in Mountain View, California, named Google, which has become the default search engine of the digital in-crowd.”</p><hr>
+
+<p><b><u>“E-Mail from Bill”</b></u></p>
+
+<p><img src="C:\Users\rjbea\Documents\DHDK Bologna\Year 1\4. Information Modelling and Web Technologies\imgs\Stories/Sunday-Reading-940110_r27976.jpg" alt="Computer pic" height="400"><br>
+<small>Photograph by Alan Levenson / The LIFE Images Collection / Getty</small></p>
+
+<p>“Sitting at my computer one day, I realized that I could try to communicate with Bill Gates, the chairman and co-founder of the software giant Microsoft, on the information highway.”</p><hr>
+
+<p><b><u>“Bytes and Chips”</b></u></p>
+
+<p>“In just a matter of weeks, a couple of men in their twenties from Los Altos, California will start selling Apple II—a fully assembled briefcase-size unit, with a large memory and a keyboard, that can play any number of computer games, draw pictures on your color TV, and operate like any other computer.”<p><hr>
+
+<p><i><a href="https://twitter.com/erinoverbey">Erin Overbey</a> is the chief archivist of The New Yorker. She has been an archivist at the magazine since 1995.</i><p>
+
+<p><i><a href="https://www.newyorker.com/contributors/joshua-rothman">Joshua Rothman</a> is The New Yorker’s archive editor. He is also a frequent contributor to newyorker.com, where he writes about books and ideas.</i></p>
 
 	</body>
 </html>
