--- a/index.html
+++ b/index.html
@@ -80,28 +80,28 @@
 <h2 class="title">Sunday Reading: The Birth of Tech</h2>
 <p class="writeranddate">By Erin Overbey and Joshua Rothman January 27, 2019 </p>
 
-<p class="photocap photolayout"><img src="https://github.com/RebeccaJillianBeattie/IMWT/blob/main/Sunday-Reading-The-Internet.jpg" alt="Computer pic" height="400"><br>
+<p class="photocap photolayout"><img src="https://raw.githubusercontent.com/RebeccaJillianBeattie/IMWT/main/Sunday-Reading-The-Internet.jpg" alt="Computer pic" height="400"><br>
 <small>Photograph by Jonathan Elderfield / Liaison / Getty</small></p>
 
 <p class="text">Today, for better and for worse, the Internet is a part of all of our lives. But it wasn’t always so. This week, we’re bringing you pieces from the early days of tech culture, when going online was a novelty and kids still played outside. In “My First Flame,” from 1994, John Seabrook describes his first experience with online insults and trolling (“in any other medium, these words would be, literally, unspeakable”); he also undertakes an electronic correspondence with Bill Gates, in “E-Mail from Bill.” (“We were intimate in a curious way, in the sense of being wired into each other’s minds, but our contact was elaborately stylized, like ballroom dancing.”) In “Virtual Love,” from 1997, Meghan Daum experiments with Internet dating, despite not being “what most people would call a ‘computer person.’ ” John Heilemann, John Cassidy, and Michael Specter offer early profiles of Steve Jobs, Mark Zuckerberg, and Larry Page and Sergey Brin, respectively. Erik Larson recounts the story of iVillage, the Internet company whose two female co-founders, Nancy Evans and Candice Carpenter, became unimaginably rich through an I.P.O., despite being “neither ‘Web heads’ nor computer geeks,” signalling a new era in tech. Lauren Collins explores a new form of self-expression—the clever naming of one’s Wi-Fi network. Nicholson Baker uses a Kindle for the first time and wonders if a device could ever be better than a book. Finally, in a Talk of the Town story, from 1977, Anthony Hiss visits an acquaintance in California with a new hobby: assembling his own personal computer. Eventually, his acquaintance predicts, people will “start hooking their machines in with their friends’ machines, and people will get on nets of computers, which could mean you could vote or buy something while sitting at your own computer keyboard.” He notes that “if the electricity fails, the kids will be in trouble.” He didn’t know the half of it.</p><hr>
 
 <p class="storytitle"><b><u>“My First Flame”</b></u></p>
 
-<p class="photocap photolayout"><img src="https://github.com/RebeccaJillianBeattie/IMWT/blob/main/Sunday-Reading-940606_ra612.jpg" alt="Computer pic" height="400"><br>
+<p class="photocap photolayout"><img src="https://raw.githubusercontent.com/RebeccaJillianBeattie/IMWT/main/Sunday-Reading-940606_ra612.jpg" alt="Computer pic" height="400"><br>
 <small>Photograph by Jonathan Elderfield / Liaison / Getty</small></p>
 
 <p class="text">“I got flamed for the first time a couple of months ago. To flame, according to ‘Que’s Computer User’s Dictionary,’ is ‘to lose one’s self-control and write a message that uses derogatory, obscene, or inappropriate language.’ ”</p><hr>
 
 <p class="storytitle"><b><u>“Virtual Love”</b></u></p>
 
-<p class="photocap photolayout"><img src="https://github.com/RebeccaJillianBeattie/IMWT/blob/main/Sunday-Reading-970825_ra610.jpg" alt="Computer pic" height="400"><br>
+<p class="photocap photolayout"><img src="https://raw.githubusercontent.com/RebeccaJillianBeattie/IMWT/main/Sunday-Reading-970825_ra610.jpg" alt="Computer pic" height="400"><br>
 <small>Photograph by James Keyser / The LIFE Images Collection / Getty</small></p>
 
 <p class="text">“Thanks to the computer, I was involved in a well-defined courtship, a neat little space in which he and I were both safe to express the panic and the fascination of our mutual affection.”</p><hr>
 
 <p class="storytitle"><b><u>“The Perceptionist”</b></u></p>
 
-<p class="photocap photolayout"><img src="https://github.com/RebeccaJillianBeattie/IMWT/blob/main/Sunday-Reading-970908_ra613.jpg" alt="Computer pic" height="400"><br>
+<p class="photocap photolayout"><img src="https://raw.githubusercontent.com/RebeccaJillianBeattie/IMWT/main/Sunday-Reading-970908_ra613.jpg" alt="Computer pic" height="400"><br>
 <small>Photograph by Michael L. Abramson / Getty</small></p>
 
 <p class="text">“Steve Jobs’s mastery of perception has long been known to his allies and his detractors alike as his ‘reality-distortion field’—an uncanny ability, through enthusiasm, charisma, and intimidation, to make people see what he wants them to see.”</p><hr>
@@ -120,7 +120,7 @@
 
 <p class="storytitle"><b><u>“A New Page”</b></u></p>
 
-<p class="photocap photolayout"><img src="https://github.com/RebeccaJillianBeattie/IMWT/blob/main/Sunday-Reading-090803_r18587_p646.jpg" alt="Computer pic" height="400"><br>
+<p class="photocap photolayout"><img src="https://raw.githubusercontent.com/RebeccaJillianBeattie/IMWT/main/Sunday-Reading-090803_r18587_p646.jpg" alt="Computer pic" height="400"><br>
 <small>Photograph by Gus Powell</small></p>
 
 <p class="text">“Here’s what you buy when you buy a Kindle book. You buy the right to display a grouping of words in front of your eyes for your private use with the aid of an electronic display device approved by Amazon.”</p><hr>
@@ -131,7 +131,7 @@
 
 <p class="storytitle"><b><u>“E-Mail from Bill”</b></u></p>
 
-<p class="photocap photolayout"><img src="https://github.com/RebeccaJillianBeattie/IMWT/blob/main/Sunday-Reading-940110_r27976.jpg" alt="Computer pic" height="400"><br>
+<p class="photocap photolayout"><img src="https://raw.githubusercontent.com/RebeccaJillianBeattie/IMWT/main/Sunday-Reading-940110_r27976.jpg" alt="Computer pic" height="400"><br>
 <small>Photograph by Alan Levenson / The LIFE Images Collection / Getty</small></p>
 
 <p class="text">“Sitting at my computer one day, I realized that I could try to communicate with Bill Gates, the chairman and co-founder of the software giant Microsoft, on the information highway.”</p><hr>
