--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 		</style>
 	</head>
 	<body class="container">
-<div id="banner"><h1 class="titlemain">The<br>New Yorker</h1><br>
+<div id="banner"><h1 class="titlemain">The<br>New Yorker</h1>
 <h2 class="title">Sunday Reading: The Birth of Tech</h2>
 
 <p class="writeranddate">By <a href="https://twitter.com/erinoverbey">Erin Overbey</a> and <a href="https://www.newyorker.com/contributors/joshua-rothman">Joshua Rothman</a>, <i>January 27, 2019</i></p></div>
