--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 			display: grid;
 			width: 25cm;
 			height: auto;
-			margin-left: 3.9cm;
+			margin-left: auto;
+			margin-right:auto;
 			grid-template-areas: 	"head head"
 									"intro intro"
 									"st1 st2"
