--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(PlaceHolderImage.jpg); height: 80%;">
+		<div class="container" style="background-image: url(PlaceHolderImage.jpg); padding-top: 20%; padding-bottom: 20%; background-size: cover;">
 			<h1>PROJECT TITLE</h1>
 			<p>SOME INTRODUCTORY TEXT</p>
 		</div>
