--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(PlaceHolderImage.jpg); padding-top: 40%; padding-bottom: 40%;">
+		<div class="container" style="background-image: url(PlaceHolderImage.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
 			<h1>PROJECT TITLE</h1>
 			<p>SOME INTRODUCTORY TEXT</p>
 		</div>
 	</div>
+	<hr>
 	
 	<!--introduction to the magazine-->
 	<div class="textsection" id="magazineIntro">
