--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<!--project css and javascript files-->
 	<link rel="stylesheet" href="INSERT DEFAULT STYLESHEET" id="INSERT DEFAULT STYLESHEET ID">
-	<script src="INSERT JAVASCRIPT"></script>
+	<script src="javascript.js"></script>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
 						<a class="nav-link" href="#">Editors</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Disclaimer</a>
+						<a class="nav-link" onclick="disclaimer()">Disclaimer</a>
 					</li>
 				</ul>
 			</div>
@@ -82,7 +82,7 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(PlaceHolderImage.jpg); padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
+		<div class="container" style="background-image: url(#); ; padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
 			<h1>PROJECT TITLE</h1>
 			<p>SOME INTRODUCTORY TEXT</p>
 		</div>
@@ -105,4 +105,6 @@
 		</div>
 	</footer>
 
+</body>
 </html>
+	
