--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-	<header>
+	<header class="header sticky-top">
 	<!--main navbar-->
-	<nav class="navbar navbar-expand-md navbar-light">
+	<nav class="navbar navbar-expand-md navbar-dark">
 		<div class="container">
 			<div id="PROJECT TITLE">
 				<a class="navbar-brand" href="index.html">PROJECT TITLE</a>
@@ -82,7 +82,7 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(PlaceHolderImage.jpg); ; padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
+		<div class="container" style="background-image: url(#); ; padding-top: 10%; padding-bottom: 10%;  background-size: cover;">
 			<h1>PROJECT TITLE</h1>
 			<p>SOME INTRODUCTORY TEXT</p>
 		</div>
@@ -107,4 +107,5 @@
 
 </body>
 </html>
+	
 	
