--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 	<header class="header sticky-top">
 	<!--main navbar-->
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-md navbar-light">
 		<div class="container">
 			<div id="PROJECT TITLE">
 				<a class="navbar-brand" href="index.html">PROJECT TITLE</a>
