--- a/index.html
+++ b/index.html
@@ -1,7 +1,29 @@
+<!DOCTYPE HTML>
+<html lang="en">
+
+<head>
+	<!--metadata tags-->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrint-to-fit=no">
+	<title>TITLE PLACEHOLDER</title>
+	
+	<!--bootstrap information-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	
+	<!--project css and javascript files-->
+	<link rel="stylesheet" href="INSERT DEFAULT STYLESHEET" id="INSERT DEFAULT STYLESHEET ID">
+	<script src="javascript.js"></script>
+</head>
+
 <body>
 	<header class="header sticky-top">
 	<!--main navbar-->
-	<nav class="navbar navbar-expand-md navbar-light">
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 		<div class="container">
 			<div id="PROJECT TITLE">
 				<a class="navbar-brand" href="index.html">PROJECT TITLE</a>
