--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	</nav>
 	
 	<!--CSS styles navbar-->
-	<ul class="nav justify-content-center navbar-menu" id="cssnavbar">
+	<ul class="nav justify-content-center navbar-menu navbar-light" id="cssnavbar">
 		<li class="nav-item">
 			<a class="nav-link sec-nav" onclick="#">Theme1</a>
 		</li>
