--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	
 	<!--jumbotron-->
 	<div class="jumbotron jumbotron-fluid">
-		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg)">
+		<div class="container" style="background-image: url(ApolloAndNineMuses1.jpg);">
 			<h1>Clio &amp; Erato</h1>
 			<p>SOME INTRODUCTORY TEXT</p>
 		</div>
